--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
   <h1>sobre a barbearia alura</h1>
+
     <p>localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há  de melhor para  seu cabelo e barba.
-    Fundada 
+    Fundada em 2019, a barbearia Alura já é destaque na cidade e na conquista novos clientes  a cada dia .</p> 
+
+<p><em> Nossa missão é : <STRONG </em></p>
     </p>
   </h1>  
+<Link rel="stylesheet" href = "style .css">
 </body>
 </html>
 
