--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbearia alura</title>
-</head>
+    <title>Barbearia Alura</title>
+   <link rel="stylesheet" href="style.css">
+    </head> 
+    
 <body>
+<div class="imagem-banner">
+  <img src="banner.jpg" alt="foto do salão da barbearia">
+</div>
   <h1>sobre a barbearia alura</h1>
 
-    <p>localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há  de melhor para  seu cabelo e barba.
-    Fundada em 2019, a barbearia Alura já é destaque na cidade e na conquista novos clientes  a cada dia .</p> 
+    <p>localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há
+        de melhor para  seu cabelo e barba.
+    Fundada em 2019, a barbearia Alura já é destaque na cidade e na conquista novos clientes  a cada 
+    dia .</p> 
 
 <p><em> Nossa missão é : <STRONG </em></p>
     </p>
   </h1>  
-<Link rel="stylesheet" href = "style .css">
+<Link rel="stylesheet" href = "style.css">
 </body>
 </html>
 
