--- a/index.html
+++ b/index.html
@@ -19,10 +19,32 @@
     Fundada em 2019, a barbearia Alura já é destaque na cidade e na conquista novos clientes  a cada 
     dia .</p> 
 
+
+
+
+
+
+
+
+
 <p><em> Nossa missão é : <STRONG </em></p>
-    </p>
-  </h1>  
-<Link rel="stylesheet" href = "style.css">
+
+
+
+
+  
+  <div class="beneficios">
+    <h2>Benefícios</h2>
+
+    <ul>
+        <li class="itens">Atendimento aos Clientes</li>
+        <li class="itens">Espaço diferenciado</li>
+        <li class="itens">Localização</li>
+        <li class="itens">Profissionais Qualificados</li>
+    </ul>
+
+    <img src="beneficios.jpg" class="imagembeneficios">
+</div>
 </body>
 </html>
 
